update hero background url

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ section {
 
 .home {
   min-height: 85vh;
-  background: url(https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=940) no-repeat;
+  background: url(https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?auto=compress&cs=tinysrgb&dpr=2) no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
