--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ section {
 }
 
 
-.featured .fbox-container,
+.fbox-container,
 .services .box-container {
   display: flex;
   flex-wrap: wrap;
@@ -205,7 +205,7 @@ section {
   text-transform: none;
 }
 
-.featured .fbox-container .box {
+.fbox-container .box {
   border: 0.1rem solid rgba(0, 0, 0, 0.2);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
@@ -214,32 +214,32 @@ section {
   flex: 1 1 30rem;
 }
 
-.featured .fbox-container .box .image-container {
+.fbox-container .box .image-container {
   overflow: hidden;
   position: relative;
   width: 100%;
   height: 25rem;
 }
 
-.featured .fbox-container .box .image-container img {
+.fbox-container .box .image-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: 0.2s linear;
 }
 
-.featured .fbox-container .box:hover .image-container img {
+.fbox-container .box:hover .image-container img {
   transform: scale(1.1);
 }
 
-.featured .fbox-container .box .image-container .info {
+.fbox-container .box .image-container .info {
   position: absolute;
   top: 1rem;
   left: 0;
   display: flex;
 }
 
-.featured .fbox-container .box .image-container .info h3 {
+.fbox-container .box .image-container .info h3 {
   font-weight: 500;
   font-size: 1.4rem;
   color: #fff;
@@ -249,14 +249,14 @@ section {
   margin-left: 1rem;
 }
 
-.featured .fbox-container .box .image-container .icons {
+.fbox-container .box .image-container .icons {
   position: absolute;
   bottom: 1rem;
   right: 0;
   display: flex;
 }
 
-.featured .fbox-container .box .image-container .icons a {
+.fbox-container .box .image-container .icons a {
   font-size: 1.4rem;
   color: #fff;
   display: flex;
@@ -266,52 +266,52 @@ section {
   padding: 0.7rem;
 }
 
-.featured .fbox-container .box .image-container .icons a h3 {
+.fbox-container .box .image-container .icons a h3 {
   font-weight: 500;
   padding-left: 0.5rem;
 }
 
-.featured .fbox-container .box .image-container .icons a:hover {
+.fbox-container .box .image-container .icons a:hover {
   background: var(--main-color);
 }
 
-.featured .fbox-container .box .content {
+.fbox-container .box .content {
   padding: 1.5rem;
 }
 
-.featured .fbox-container .box .content .price {
+.fbox-container .box .content .price {
   display: flex;
   align-items: center;
 }
 
-.featured .fbox-container .box .content .price h3 {
+.fbox-container .box .content .price h3 {
   color: var(--main-color);
   font-size: 2rem;
   margin-right: auto;
 }
 
-.featured .fbox-container .box .content .locations {
+.fbox-container .box .content .locations {
   padding: 1rem 0;
 }
 
-.featured .fbox-container .box .content .locations h3{
+.fbox-container .box .content .locations h3{
   font-size: 2.5rem;
   color: #333;
 }
 
-.featured .fbox-container .box .content .locations p {
+.fbox-container .box .content .locations p {
   font-size: 1.5rem;
   color: #666;
   line-height: 1.5;
   padding-top: .5rem;
 }
 
-.featured .fbox-container .box .content .details {
+.fbox-container .box .content .details {
   padding: .5rem 0;
   display: flex;
 }
 
-.featured .fbox-container .box .content .details h3 {
+.fbox-container .box .content .details h3 {
   flex: 1;
   padding: 1rem;
   border: .1rem solid rgba(0, 0, 0, 0.1);
@@ -319,24 +319,24 @@ section {
   font-size: 1.4rem;
 }
 
-.featured .fbox-container .box .content .details h3 i {
+.fbox-container .box .content .details h3 i {
   color: #333;
   padding-left: .5rem;
 }
 
 
-.featured .fbox-container .box .content .buttons {
+.fbox-container .box .content .buttons {
   display: flex;
   gap: 1rem;
   margin-top: 1.5rem;
 }
 
-.featured .fbox-container .box .content .buttons .btn {
+.fbox-container .box .content .buttons .btn {
   flex: 1;
   font-size: 1.5rem;
 }
 
- .box-container .box .fa-phone:hover {
+.box-container .box .fa-phone:hover {
   color: var(--main-color);
 }
 
