background image set to cover

--- a/src/style.css
+++ b/src/style.css
@@ -126,7 +126,7 @@ section {
 .home {
   min-height: 85vh;
   background: url(https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?auto=compress&cs=tinysrgb&dpr=2) no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center;
   background-attachment: fixed;
   display: flex;
